swarm/tests/ui/fail/out_event_deprecation.stderr
error: use of deprecated constant `out_event_renamed_to_to_swarm::_w`:
               It is deprecated to use the out_event attribute `#[behaviour(out_event = ...)]`.
               Please instead use the to_swarm attribute `#[behaviour(to_swarm = ...)]`.
 --> tests/ui/fail/out_event_deprecation.rs:7:8
  |
7 | struct Foo {
  |        ^^^
  |
note: the lint level is defined here
 --> tests/ui/fail/out_event_deprecation.rs:1:9
  |
1 | #![deny(warnings)] // Ensure the warnings we produce surface as errors.
  |         ^^^^^^^^
  = note: `#[deny(deprecated)]` implied by `#[deny(warnings)]`
